refactor: 基于LangChain4j重构AI服务栈
1. 新增langchain4j-open-ai依赖，解锁OpenAI兼容模型支持
2. 新增OpenAiModelFactory，统一管理OpenAI兼容模型缓存
3. 新增AiServiceFactory，动态构建AI服务代理
4. 新增4个AI服务接口：TitleGenerator/ContentOptimizer/MultimodalPlannerAI/MemoryExtractionAI，使用@UserMessage/@SystemMessage替代手写prompt
5. 重构TitleGenerationService/MultimodalPlannerService/MemoryExtractorImpl，使用AiServices替代手写LLM调用与JSON解析
6. 重构OllamaClient与StreamingConfig，统一流式模型缓存与调用
7. 删除约1000行重复代码，提升结构化输出稳定性